# IP-Address-Changer-Tool

./: .gitignore  CMakeLists.txt  ChangeIPTool.pro  IpConfigManager.cpp  IpConfigManager.h  LICENSE  MainWindow.cpp  MainWindow.h  NetworkAdapterManager.cpp  NetworkAdapterManager.h  README.md  build.bat  build_qmake.bat  main.cpp  package.bat
icons/: README.txt
